// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIAutocompleter has data-automationid set on the input, list, dropdown and container 1`] = `
<div
  className=""
  data-automationid="baseAC--container"
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid="baseAC--dropdown"
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid="baseAC--input--container"
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid="baseAC--input"
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter inserts the searchValue inside the input 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value="a"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the input element when passed in the inputClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input test-class xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the root node when passed in the className prop 1`] = `
<div
  className="test-class"
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the trigger element when passed in the triggerClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap test-class"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a placeholder inside the input when passed in 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder="Search"
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the input when a value is passed to the inputId prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id="test-inputId"
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the root node when passed in the id prop 1`] = `
<div
  className=""
  data-automationid={null}
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render as disabled when isDisabled prop is true 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-is-disabled xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={undefined}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should respect a max length of the input value when the maxLength has a value 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="xui-input xui-autocompleter--trigger xui-autocompleter--trigger-pillwrap"
      id="trigger"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="xui-inputwrapper xui-autocompleter--inputwrapper"
        data-automationid={null}
      >
        <input
          className="xui-input xui-input-borderless xui-autocompleter--input xui-autocompleter--input xui-input-has-right-icon"
          data-automationid={null}
          id={undefined}
          maxLength={5}
          onChange={[Function]}
          onFocus={null}
          onKeyDown={[Function]}
          onKeyPress={undefined}
          onKeyUp={[Function]}
          placeholder={undefined}
          type="search"
          value="123456"
        />
      </div>
    </div>
  </div>
</div>
`;
